Revision history for {{$dist->name}}

{{$NEXT}}
          New methods dist_basename & archive_filename allow plugins
          to reliably get that information.  This makes TestRelease
          testable. (Thanks, Kent Fredric & Christopher J. Madsen!)

4.300005  2011-12-13 08:49:19 America/New_York
          Prereqs now actually understands -relationship as documented
          in 4.300004.  Also, it throws an error if you give it a
          plugin name that does not specify a relationship (Thanks,
          Christopher J. Madsen!)

4.300004  2011-12-12 23:34:30 America/New_York
          a new FileFinder plugin has been added, FileFinder::Filter
          (Thanks, Christopher J. Madsen!)

          AutoPrereqs can now be told to determine configure_requires
          (Thanks, Christopher J. Madsen!)

          the (lack of) order of check of authordeps is now a bit more
          predictible:
          - plugins declared with "; authordep" lines are loaded before others
          - inc:: plugins are checked first and in ASCII order
          (Thanks, Olivier Mengué!)

          Many slow-to-load modules are now loaded opportunistically to improve
          startup time.  (Thanks Olivier Mengué and rjbs)

          ShareDir documentation has been improved (thanks, Karen
          Etheridge)

          Prereqs documentation has been improved

4.300003  2011-10-31 23:58:19 America/New_York
          If no credentials are found on disk, UploadToCPAN will now prompt for
          credentials during the BeforeRelease phase, not during release
          (Thanks, Christopher J. Madsen!)

          AutoPrereqs can now be told what scanners or extra_scanners args to
          pass to Perl::PrereqScanner (Thanks, Christopher J. Madsen!)

          Prune perl prereqs out of BUILD_REQUIRES for EU::MM, and pick the
          highest required perl of either runtime or built requires.  (Thanks,
          Christopher J. Madsen!)
