@@ -56,11 +56,21 @@ sub prompt_str {
   my $default = $arg->{default};
   my $check   = $arg->{check};
 
+  if ($arg->{noecho}) {
+    require Term::ReadKey;
+    Term::ReadKey::ReadMode('noecho');
+  }
   my $input_bytes = $self->term_ui->get_reply(
     prompt => $prompt,
     allow  => $check || sub { defined $_[0] and length $_[0] },
     (defined $default ? (default => $default) : ()),
   );
+  if ($arg->{noecho}) {
+    Term::ReadKey::ReadMode('normal');
+    # The \n ending user input disappears under noecho; this ensures
+    # the next output ends up on the next line.
+    print "\n";
+  }
 
   my $input = decode_utf8( $input_bytes );
   chomp $input;
