@@ -5,6 +5,10 @@ Revision history for {{$dist->name}}
           to reliably get that information.  This makes TestRelease
           testable. (Thanks, Kent Fredric & Christopher J. Madsen!)
 
+          Your PAUSE password will now no be echoed if entered at the
+          prompt, on most operating systems (Thanks, Mike Doherty!)
+
+
 4.300005  2011-12-13 08:49:19 America/New_York
           Prereqs now actually understands -relationship as documented
           in 4.300004.  Also, it throws an error if you give it a
